--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
@@ -11,6 +13,15 @@
     <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-3fO3s5DAbGKhC1sZbE+O1V84JZ2a5Fe89OGWOrXxxFv0W0NfIjHE4NHUmAg3HNOE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-FTwz/pg8fhY1R4b0B+yXPs+0HGm5L7+s/VLtIM1COH2pUpU5nJ5ddcV9WoH6wX3q" crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WENQBNN4QX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WENQBNN4QX');
+    </script>
 
     <meta
       name="description"
